Fix navbar item spacing

--- a/front-end/src/gencomponents/navbar/NavbarAndMenu.css
+++ b/front-end/src/gencomponents/navbar/NavbarAndMenu.css
@@ -30,6 +30,7 @@
     font-weight: 800;
     font-size: 22px;
     color: rgb(238, 238, 238);
+    margin-left: 10px;
 }
 
 .navCollapseElement {
